// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": undefined,
      "dot": undefined,
      "id": "default",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.color - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": "#9c27b0",
      "count": undefined,
      "dot": undefined,
      "id": "properties.color",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.count - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": 50,
      "dot": undefined,
      "id": "properties.count",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.count: 0 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": 0,
      "dot": undefined,
      "id": "properties.count: 0",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.dot: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": undefined,
      "dot": true,
      "id": "properties.dot: true",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon object - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": <IconBlock
        actions={Object {}}
        blockId="properties.icon object_icon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [MockFunction],
            "registerAction": [Function],
            "registerMethod": [Function],
          }
        }
        properties={
          Object {
            "name": "NotificationOutlined",
            "spin": true,
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "dot": undefined,
      "id": "properties.icon object",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon string - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": <IconBlock
        actions={Object {}}
        blockId="properties.icon string_icon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [MockFunction],
            "registerAction": [Function],
            "registerMethod": [Function],
          }
        }
        properties="NotificationOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "dot": undefined,
      "id": "properties.icon string",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.offset [x,y] - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": undefined,
      "dot": true,
      "id": "properties.offset [x,y]",
      "offset": Array [
        25,
        10,
      ],
      "overflowCount": 100,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.overflowCount - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": 15,
      "dot": undefined,
      "id": "properties.overflowCount",
      "offset": undefined,
      "overflowCount": 10,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.showZero - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": 0,
      "dot": undefined,
      "id": "properties.showZero",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": true,
      "status": undefined,
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.status: default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": undefined,
      "dot": undefined,
      "id": "properties.status: default",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": "default",
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.status: error - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": undefined,
      "dot": undefined,
      "id": "properties.status: error",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": "error",
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.status: error and text: Error! - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": undefined,
      "dot": undefined,
      "id": "properties.status: error and text: Error!",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": "error",
      "text": "Error!",
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.status: processing - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": undefined,
      "dot": undefined,
      "id": "properties.status: processing",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": "processing",
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.status: success - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": undefined,
      "dot": undefined,
      "id": "properties.status: success",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": "success",
      "text": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title: When hovering over badge - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "color": undefined,
      "count": 50,
      "dot": undefined,
      "id": "properties.title: When hovering over badge",
      "offset": undefined,
      "overflowCount": 100,
      "showZero": undefined,
      "status": undefined,
      "text": undefined,
      "title": "When hovering over badge",
    },
    Object {},
  ],
]
`;
